# atmorep_analysis

./: data_exploration.py  pyproject.toml
atmorep_analysis/attention/: attention_utils.py  plot_attention.py
atmorep_analysis/forecast/: forecasting_zarr.py
atmorep_analysis/trainings/: training_utils.py  training_zarr.py
atmorep_analysis/utils/: plotter.py  plotting.py  read_atmorep_data.py
utils/: read_atmorep_data.py
